--- a/index.html
+++ b/index.html
@@ -7,45 +7,62 @@
     <title>Document</title>
     <style>
         *{box-sizing: border-box;}
+        body{
+            background:white;
+        }
+        .rainbow{
+            height: 200px;
+            overflow: hidden;
+        }
+        .rainbow div{
+            border-radius: 50%;
+            overflow: hidden;
+        }
         .rainbow > div{
-            border: 1px solid hsl(0, 80%, 50%);
+            /* border: 1px solid hsl(0, 80%, 50%); */
             width: 400px;
             height: 400px;
             background: red;
         }
         .rainbow >div >div{
-            border: 1px solid hsl(60, 80%, 50%);
+            /* border: 1px solid hsl(60, 80%, 50%); */
             background: hsl(60, 80%, 50%);
             height: 380px;
             margin: 10px;   
         }
         .rainbow >div >div >div{
-            border: 1px solid hsl(120, 80%, 50%);
+            /* border: 1px solid hsl(120, 80%, 50%); */
             background: hsl(120, 80%, 50%);
             height: 360px;
             margin: 10px;   
         }
         .rainbow >div >div >div >div{
-            border: 1px solid hsl(180, 80%, 50%);
+            /* border: 1px solid hsl(180, 80%, 50%); */
             background: hsl(180, 80%, 50%);
             height: 340px;
             margin: 10px;   
         }
         .rainbow >div >div >div >div >div{
-            border: 1px solid hsl(240, 80%, 50%);
+            /* border: 1px solid hsl(240, 80%, 50%); */
             background: hsl(240, 80%, 50%);
             height: 320px;
             margin: 10px;   
         }
         .rainbow >div >div >div >div >div >div{
-            border: 1px solid hsl(300, 80%, 50%);
+            /* border: 1px solid hsl(300, 80%, 50%); */
             background: hsl(300, 80%, 50%);
             height: 300px;
             margin: 10px;   
         }
         .rainbow >div >div >div >div >div >div >div{
-            border: 1px solid hsl(330, 80%, 50%);
+            /* border: 1px solid hsl(330, 80%, 50%); */
             background: hsl(330, 80%, 50%);
+            height: 280px;
+            margin: 10px;   
+        }
+        .rainbow >div >div >div >div >div >div >div >div{
+            /* border: 1px solid hsl(330, 80%, 50%); */
+            background:white;
             height: 280px;
             margin: 10px;   
         }
